assets/css/style.css
/*!
 * Start Bootstrap - Landing Page v5.0.7 (https://startbootstrap.com/template-overviews/landing-page)
 * Copyright 2013-2019 Start Bootstrap
 * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-landing-page/blob/master/LICENSE)
 */


  header.masthead {
    position: relative;
    background-size: cover;
    padding-top: 8rem;
    padding-bottom: 8rem;
  }
  
  header.masthead .overlay {
    position: absolute;
    /* background-color: #212529; */
    height: 100%;
    width: 100%;
    top: 0;
    left: 0;
    opacity: 0.8;
  }
  
  header.masthead h1 {
    font-size: 2rem;
  }
  
  @media (min-width: 768px) {
    header.masthead {
      padding-top: 12rem;
      padding-bottom: 12rem;
    }
    header.masthead h1 {
      font-size: 3rem;
    }
  }
  
  .showcase .showcase-text {
    padding: 3rem;
  }
  
  .showcase .showcase-img {
    min-height: 30rem;
    background-size: cover;
  }
  
  @media (min-width: 768px) {
    .showcase .showcase-text {
      padding: 7rem;
    }
  }

  .page-title {
    font-family: 'Monoton', cursive;
    font-size: 150%;
  }
  
  .features-icons {
    padding-top: 7rem;
    padding-bottom: 7rem;
  }
  
  .features-icons .features-icons-item {
    max-width: 20rem;
  }
  
  .features-icons .features-icons-item .features-icons-icon {
    height: 7rem;
  }
  
  .features-icons .features-icons-item .features-icons-icon a {
    font-size: 4.5rem;
  }
  
  .features-icons .features-icons-item:hover .features-icons-icon a {
    font-size: 5rem;
  }

  #icon-calendar, #icon-chart-line, 
  #icon-merch {
    align-content: center;
  }
  
  /* .testimonials {
    padding-top: 7rem;
    padding-bottom: 7rem;
  }
  
  .testimonials .testimonial-item {
    max-width: 18rem;
  }
  
  .testimonials .testimonial-item img {
    max-width: 12rem;
    box-shadow: 0px 5px 5px 0px #adb5bd;
  } */
  
  .call-to-action {
    position: relative;
    background-color: #343a40;
    background-size: cover;
    padding-top: 7rem;
    padding-bottom: 7rem;
    opacity: 0.3;
  }
  
  .call-to-action .overlay {
    position: absolute;
    background-color: #212529;
    height: 100%;
    width: 100%;
    top: 0;
    left: 0;
  }
  
  footer.footer {
    padding-top: 4rem;
    padding-bottom: 4rem;
  }

  .bg-light {
    background-color: #f8f9fa!important;
    z-index: 1;
}

 header video {
    position: absolute;
    top: 50%;
    left: 50%;
    min-width: 100%;
    min-height: 100%;
    width: auto;
    height: auto;
    z-index: 0;
    -ms-transform: translateX(-50%) translateY(-50%);
    -moz-transform: translateX(-50%) translateY(-50%);
    -webkit-transform: translateX(-50%) translateY(-50%);
    transform: translateX(-50%) translateY(-50%);
  }


.card {
  display: flex;
  background-color: #fff;
  min-width: 30vw;
  min-height: 30vh;
  overflow-x: auto;
}
.card--content {
  background-color: blue;
  min-width: 200px;
  margin: 5px;
}

  

